# TempMon

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
bundle/: README.md
bundle/nsis/: installer.nsi
src/: assets.rs  constants.rs  main.rs
src/app/: cpu_power_and_usage_graph.rs  cpu_power_usage.rs  cpu_total_power_and_usage_graph.rs  exit_confirmation_modal.rs  layout.rs  main_window.rs  mod.rs  plot_window.rs  service.rs  settings.rs  styles.rs  temp_graph.rs  tempmon.rs  termperature_graph.rs
src/app/cards/: cores_card.rs  cpu_card.rs  cpu_cores_card.rs  gpu_card.rs  mod.rs
src/app/data_logs/: file_list.rs  history_graphs.rs  history_tab.rs  metadata.rs  mod.rs
src/app/graphs/: cpu_power_usage.rs  gauge.rs  gpu_power_usage.rs  mod.rs  temp_graph.rs
src/collectors/: cpu_collector.rs  cpu_data.rs  gpu_collector.rs  gpu_data.rs  lhm_collector.rs  mod.rs
src/types/: hardware.rs  mod.rs  settings.rs  ui.rs
src/utils/: csv_logger.rs  icon_cache.rs  mod.rs  startup.rs  tray.rs
tests/: test_csv_logger.rs
