[package]
name = "temp-monitor"
version = "0.8.0"
repository = "https://github.com/ckapiainen/temp-monitor"
authors = ["ckapiainen"]
edition = "2021"
build = "build.rs"

[dependencies]
iced = { git = "https://github.com/iced-rs/iced", rev = "bfc27e4", features = ["tokio", "wgpu", "image", "svg", "canvas"] }
iced_plot = { git = "https://github.com/ckapiainen/iced_plot", branch = "font-edit-and-line-width" }

anyhow = "1.0.100"
tokio = { version = "=1.45.1", features = ["rt", "time", "fs", "macros"] }
colored = "3.0.0"
tray-icon = "0.14.3"
image = { version = "0.25", features = ["jpeg", "png"] }
sysinfo = "0.37.2"
csv = "1.4.0"
toml = "0.9.8"
env_logger = "0.11.8"
wmi = "0.17.3"
lhm-client = "0.3.0"
lilt = "0.8.1"
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_UI_WindowsAndMessaging",
] }
serde = "1.0.228"
chrono = "0.4.42"
dirs = "6.0.0"
[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.packager]
formats = ["nsis"]
identifier = "com.temp-monitor"
publisher = "ckapiainen"
product_name = "TempMon"
icons = ["assets/logo.ico"]
# bundled dependencies
resources = [
    "assets/logo.ico",
    "assets/icons/arrow-bar-to-left.svg",
    "assets/icons/arrow-bar-to-right.svg",
    "assets/icons/chart-spline.svg",
    "assets/icons/cpu.svg",
    "assets/icons/menu.svg",
    "assets/icons/microchip.svg",
    "assets/icons/plug-zap.svg",
    "assets/icons/settings.svg",
    "bundle/PawnIO_setup.exe",
    "bundle/lhm-service.exe",
    "bundle/lhm-bridge.dll",
]

[package.metadata.packager.nsis]
installMode = "both"
template = "bundle/nsis/installer.nsi"
languages = ["English"]
installer_icon = "assets/logo.ico"

[build-dependencies]
embed-resource = "3.0.6"
